--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 </head>
 <body>
     <div class="bcg">
+        <div></div>
         <div>
             <a class="rel" href="index.html"><img src="https://opengameart.org/sites/default/files/1443321549047.png" width="50px" alt=""></a>
         </div>
         <div class="cano">
-            <img src="https://cdn.pixabay.com/photo/2013/07/12/13/52/super-mario-brothers-147465_1280.png" width="70px" alt="">
+            <img src="img/pipe.png" width="100px" height="100px" alt="">
          
         </div>
         <div class="player ">
