--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="bcg">
+    <div class="background">
         <div></div>
         <div>
-            <a class="rel" href="index.html"><img src="https://opengameart.org/sites/default/files/1443321549047.png" width="50px" alt=""></a>
+            <a class="restart" href="index.html"><img src="https://opengameart.org/sites/default/files/1443321549047.png" width="50px" alt=""></a>
         </div>
-        <div class="cano">
+        <div class="pipe">
             <img src="img/pipe.png" width="100px" height="100px" alt="">
          
         </div>
